# ICS0019_Advanced_python_solutions

./: README.md  diners.db  dinersA.db  soap.json  spidey.json
Examples/Database_code/: SQLAlchemyConnect4.py  SQLAlchemyCreate1.py  SQLAlchemyFilter7.py  SQLAlchemyQuery5.py  SQLAlchemyRelatedObjects9.py  SQLAlchemyRelationship8.py  SQLAlchemySample2.py  SQLAlchemySelect3.py  SQLAlchemyUpdate6.py  college.db  dbSQL.py  dbconnect.py  sales.db
Examples/Webcrawler/: scraper0.py  scraper0result.txt  scraper1.py  scraper2.py  scraper3.py  soap0.py  soap1.py  soap2.py  soap3.py  soap4.py
HW1/triangle_baadam/: GUI.py  installModule.txt  setup.cfg  useModule.py
HW1/triangle_baadam/src/triangle_package_baadam_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HW1/triangle_baadam/src/triangle_package_v2/: triangle.py
HW1/triangle_baadam/tests/: test_triangle.py
HW2/: hwSLQAlchemy.py  hwSQLite.py
HW3/: flights.py
HW4/: scrapyIsNotValidName.py  soap.py
